更新gradle到正式版7.0，maven项目增加两条命令构建安装程序的方式